2006-01-31  Peter Dennis Bartok  <pbartok@novell.com>

	* ThemeWin32Classic.cs: Menu background is drawn in ColorMenu, not
	  in the background of the owning form. Fixes #77332

2006-01-31  Alexander Olk  <alex.olk@googlemail.com>

	* MimeIcon.cs: Fix for #77409

2006-01-31  Alexander Olk  <alex.olk@googlemail.com>

	* XplatUIX11GTK.cs: Initial import

2006-01-31  Jordi Mas i Hernandez <jordimash@gmail.com>

	* FixedSizeTextBox: fixes class signature

2006-01-30  Jackson Harper  <jackson@ximian.com>

	* FixedSizeTextBox.cs: New internal class that represents a
	textBox that will not be scaled.
	* TreeView.cs:
	* ComboBox.cs:
	* UpDownBase.cs: Use the new FixedSizeTextBox instead of a
	standard TextBox.
		
2006-01-30  Peter Dennis Bartok  <pbartok@novell.com> 

	* XplatUIX11.cs: Retrieve default screen number instead of
	  assuming 0. Attempted fix for #77318

2006-01-30  Peter Dennis Bartok  <pbartok@novell.com>

	* XplatUIWin32.cs: 
	  - GetWindowPos: When a window is parented by FosterParent, use 
	    the desktop instead of FosterParent as the base to get coordinates
	  - CreateWindow: Don't make FosterParent the parent window for Popups
	    if we don't want a taskbar entry, Popups automatically don't get one
	* Hwnd.cs: Need to call remove to actually remove the key from the
	  hash table

2006-01-30  Mike Kestner  <mkestner@novell.com>

	* MenuAPI.cs: adjust MainMenu item popup location to y=0.

2006-01-30  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs:
	* TreeNode.cs: Raise events no matter how the treenode is
	checked. Patch by Don Edvalson.

2006-01-30  Jackson Harper  <jackson@ximian.com>

	* TreeNode.cs: Signature fix.

2006-01-29  Alexander Olk  <alex.olk@googlemail.com>

	* ThemeClearlooks.cs: Fixed a crash in ProgressBar drawing.

2006-01-20  Mike Kestner  <mkestner@novell.com>

	* Form.cs: Add ActiveTracker property to do Captures and perform mouse
	event forwarding when menus are active.