@@ -2071,6 +2071,15 @@ namespace System.Windows.Forms
 
 			set {
 				base.Site = value;
+
+				AmbientProperties ap = (AmbientProperties) value.GetService (typeof (AmbientProperties));
+				if (ap != null) {
+					BackColor = ap.BackColor;
+					ForeColor = ap.ForeColor;
+					Cursor = ap.Cursor;
+					Font = ap.Font;
+				}
+				
 			}
 		}
 
